--- a/.github/workflows/weekly_payment_report.yml
+++ b/.github/workflows/weekly_payment_report.yml
@@ -26,13 +26,17 @@ jobs:
 
     - name: Run payment report script
       env:
-        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         REALM_ID: ${{ secrets.REALM_ID }}
+        CLIENT_ID: ${{ secrets.CLIENT_ID }}
+        CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+        REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
         SMTP_HOST: ${{ secrets.SMTP_HOST }}
         SMTP_PORT: ${{ secrets.SMTP_PORT }}
         SMTP_USER: ${{ secrets.SMTP_USER }}
         SMTP_PASS: ${{ secrets.SMTP_PASS }}
         TO_EMAIL: ${{ secrets.TO_EMAIL }}
+        GH_PAT: ${{ secrets.GH_PAT }}
+        GH_REPO: ${{ secrets.GH_REPO }}
       run: python main.py
 
     - name: Upload CSV artifact
